compoenet added